# OSCAR

./: .env.example  .gitignore  README.md  oscar_flowchart.mermaid  pyproject.toml  requirements.txt  setup.py  test_asterix.py
.claude/: settings.local.json
agent_states/: test_agent.json
config/: llm_config.yaml
context/: description.txt  oscar-tasks.md  plan.md  project_structure.txt
src/oscar/api/: server.py
src/oscar/cli/: main.py
src/oscar/config/: llm_config.yaml  prompts.py  settings.py
src/oscar/core/: agent.py  asterix_patch.py  planner.py  safety.py
src/oscar/memory/: asterix_adapter.py
src/oscar/tools/: base.py  browser.py  file_ops.py  git_tool.py  shell.py  web_search.py
src/oscar_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
vscode-oscar/: README.md  package-lock.json  package.json  tsconfig.json
vscode-oscar/data/logs/: audit.jsonl
vscode-oscar/media/: main.css  main.js
vscode-oscar/src/: extension.ts  oscarClient.ts  oscarViewProvider.ts  types.ts
